<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="right"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="94dp">

    <EditText
        android:id="@+id/txtResult"
        android:layout_width="360dp"
        android:layout_height="109dp"
        android:backgroundTint="#272727"
        android:ems="10"
        android:inputType="number|numberDecimal"
        android:text="@string/initEditText"
        android:textAlignment="viewStart"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.759" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32999998">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="70dp">

            <Button
                android:id="@+id/btnOne"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:height="70dp"
                android:backgroundTint="#676767"
                android:maxHeight="70dp"
                android:minWidth="70dp"
                android:minHeight="70dp"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="@string/one"
                android:textSize="24sp"
                app:cornerRadius="70dp" />

            <Button
                android:id="@+id/btnTwo"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:height="70dp"
                android:backgroundTint="#676767"
                android:maxHeight="70dp"
                android:minWidth="70dp"
                android:minHeight="70dp"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="@string/two"
                android:textSize="24sp"
                app:cornerRadius="70dp" />

            <Button
                android:id="@+id/btnThree"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:height="70dp"
                android:backgroundTint="#676767"
                android:maxHeight="70dp"
                android:minWidth="70dp"
                android:minHeight="70dp"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="@string/three"
                android:textSize="24sp"
                app:cornerRadius="70dp" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:height="70dp"
                android:backgroundTint="#A3E140"
                android:maxHeight="70dp"
                android:minWidth="70dp"
                android:minHeight="70dp"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="@string/add"
                android:textSize="24sp"
                app:cornerRadius="70dp" />

            <Button
                android:id="@+id/btnMult"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:height="70dp"
                android:backgroundTint="#A3E140"
                android:maxHeight="70dp"
                android:minWidth="70dp"
                android:minHeight="70dp"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="@string/mult"
                android:textSize="24sp"
                app:cornerRadius="70dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minWidth="100dp">

            <Button
                android:id="@+id/btnFour"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:height="70dp"
                android:backgroundTint="#676767"
                android:maxHeight="70dp"
                android:minWidth="70dp"
                android:minHeight="70dp"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="@string/four"
                android:textSize="24sp"
                app:cornerRadius="70dp" />

            <Button
                android:id="@+id/btnFive"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:height="70dp"
                android:backgroundTint="#676767"
                android:maxHeight="70dp"
                android:minWidth="70dp"
                android:minHeight="70dp"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="@string/five"
                android:textSize="24sp"
                app:cornerRadius="70dp" />

            <Button
                android:id="@+id/btnSix"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:height="70dp"
                android:backgroundTint="#676767"
                android:maxHeight="70dp"
                android:minWidth="70dp"
                android:minHeight="70dp"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="@string/six"
                android:textSize="24sp"
                app:cornerRadius="70dp" />

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:height="70dp"
                android:backgroundTint="#A3E140"
                android:maxHeight="70dp"
                android:minWidth="70dp"
                android:minHeight="70dp"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="@string/minus"
                android:textSize="24sp"
                app:cornerRadius="70dp" />

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:height="70dp"
                android:backgroundTint="#A3E140"
                android:maxHeight="70dp"
                android:minWidth="70dp"
                android:minHeight="70dp"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="@string/div"
                android:textSize="24sp"
                app:cornerRadius="70dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minWidth="100dp">

            <Button
                android:id="@+id/btnSeven"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:height="70dp"
                android:backgroundTint="#676767"
                android:maxHeight="70dp"
                android:minWidth="70dp"
                android:minHeight="70dp"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="@string/seven"
                android:textSize="24sp"
                app:cornerRadius="70dp" />

            <Button
                android:id="@+id/btnEight"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:height="70dp"
                android:backgroundTint="#676767"
                android:maxHeight="70dp"
                android:minWidth="70dp"
                android:minHeight="70dp"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="@string/eight"
                android:textSize="24sp"
                app:cornerRadius="70dp" />

            <Button
                android:id="@+id/btnNine"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:height="70dp"
                android:backgroundTint="#676767"
                android:maxHeight="70dp"
                android:minWidth="70dp"
                android:minHeight="70dp"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="@string/nine"
                android:textSize="24sp"
                app:cornerRadius="70dp" />

            <Button
                android:id="@+id/btnSqrt"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_span="2"
                android:height="70dp"
                android:backgroundTint="#A3E140"
                android:maxHeight="70dp"
                android:minWidth="70dp"
                android:minHeight="70dp"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="@string/sqrt"
                android:textSize="24sp"
                app:cornerRadius="70dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minWidth="100dp">

            <Button
                android:id="@+id/btnAC"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_span="1"
                android:height="70dp"
                android:backgroundTint="#E14040"
                android:maxHeight="70dp"
                android:minWidth="70dp"
                android:minHeight="70dp"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="@string/ac"
                android:textSize="24sp"
                app:cornerRadius="70dp" />

            <Button
                android:id="@+id/btnZero"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_span="1"
                android:height="70dp"
                android:backgroundTint="#676767"
                android:maxHeight="70dp"
                android:minWidth="70dp"
                android:minHeight="70dp"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="@string/zero"
                android:textSize="24sp"
                app:cornerRadius="70dp" />

            <Button
                android:id="@+id/btnDot"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:height="70dp"
                android:backgroundTint="#A3E140"
                android:maxHeight="70dp"
                android:minWidth="70dp"
                android:minHeight="70dp"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="@string/dot"
                android:textSize="24sp"
                app:cornerRadius="70dp" />

            <Button
                android:id="@+id/btnEqual"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:layout_span="2"
                android:height="70dp"
                android:backgroundTint="#A3E140"
                android:maxHeight="70dp"
                android:minWidth="70dp"
                android:minHeight="70dp"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="@string/equal"
                android:textSize="24sp"
                app:cornerRadius="70dp" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>